--- a/org.dieschnittstelle.jee.esa.wsv.interpreter/.classpath
+++ b/org.dieschnittstelle.jee.esa.wsv.interpreter/.classpath
@@ -6,9 +6,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.3.jar" sourcepath="C:/Users/Tom/.m2/repository/org/apache/httpcomponents/httpclient/4.1.3/httpclient-4.1.3-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpclient-cache-4.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.4.jar" sourcepath="C:/Users/Tom/.m2/repository/org/apache/httpcomponents/httpcore/4.1.4/httpcore-4.1.4-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.1.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jboss-jaxrs-api_1.1_spec-1.0.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jboss-jaxrs-api_1.1_spec-1.0.0.Final.jar" sourcepath="C:/Users/Tom/.m2/repository/org/jboss/spec/javax/ws/rs/jboss-jaxrs-api_1.1_spec/1.0.0.Final/jboss-jaxrs-api_1.1_spec-1.0.0.Final-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-all-1.7.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.dieschnittstelle.jee.esa.wsv.client.resteasyimpl"/>
